# TuxToaster

./: .bumpver.toml  LICENSE  README.md  pyproject.toml  setup.cfg  tuxtoaster.py
.github/workflows/: publish.yml
assets/: banner.py  descriptions.py  submenus.py
cpu/: all_cores.py  cpu_stress.py  custom_cpu.py  single_core.py
disk/: disk_buffcachewrites.py  disk_bwrandomrw.py  disk_bwreads.py  disk_bwrw.py  disk_bwwrites.py  disk_cachewriteswarmup.py  disk_iorandomrw.py  disk_ioreads.py  disk_iorw.py  disk_iowrites.py  disk_utils.py
legacy_build/: setup.cfg
memory/: mem_multithread.py  mem_singlethread.py  mem_spikes.py  mem_uncleangc.py
network/: network_in.py  network_in_multi.py  network_out.py  network_out_multi.py
src/tuxtoaster/: __init__.py  __main__.py  main.py  multi_runner.py
src/tuxtoaster/assets/: banner.py  descriptions.py  submenus.py
src/tuxtoaster/cpu/: all_cores.py  custom_cpu.py  single_core.py
src/tuxtoaster/disk/: disk_buffcachewrites.py  disk_bwrandomrw.py  disk_bwreads.py  disk_bwrw.py  disk_bwwrites.py  disk_cachewriteswarmup.py  disk_iorandomrw.py  disk_ioreads.py  disk_iorw.py  disk_iowrites.py  disk_utils.py
src/tuxtoaster/memory/: mem_multithread.py  mem_singlethread.py  mem_spikes.py  mem_uncleangc.py
src/tuxtoaster/network/: network_in.py  network_in_multi.py  network_out.py  network_out_multi.py  network_simulate_latency.py  network_socket_exhaustion.py
