[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuxtoaster"
version = "1.2.7"
description = "All-in-one Linux stress and benchmarking toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Samuel Matildes" }
]
license = "MIT"
keywords = ["benchmark", "linux", "stress", "cpu", "memory", "disk", "network"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: System :: Benchmark",
]

dependencies = [
  "psutil>=5.9",
  "simple-term-menu>=1.6.1",
]

[project.scripts]
tuxtoaster = "tuxtoaster.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tuxtoaster", "tuxtoaster.assets", "tuxtoaster.cpu", "tuxtoaster.disk", "tuxtoaster.memory", "tuxtoaster.network"]

[project.urls]
Homepage = "https://github.com/samatild/tuxtoaster"
Repository = "https://github.com/samatild/tuxtoaster.git"
Issues = "https://github.com/samatild/tuxtoaster/issues"


[tool.bumpver]
current_version = "1.2.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump: {old_version} → {new_version}"
tag_message = "v{new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{version}"',
]
"setup.cfg" = [
  "version = {version}",
]
