[metadata]
name = tuxtoaster
version = 1.2.6
description = All-in-one Linux stress and benchmarking toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    psutil>=5.9
    simple-term-menu>=1.6.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tuxtoaster = tuxtoaster.__main__:main

