[metadata]
name = tuxtoaster
version = 1.2.10
description = All-in-one Linux stress and benchmarking toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    psutil>=5.9
    simple-term-menu>=1.6.1
    importlib-metadata>=4,<5; python_version<'3.8'

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tuxtoaster = tuxtoaster.__main__:main

